syntax = "proto3";

option csharp_namespace = "TedOliviaAccomplishmentsApi.Protobuf";

import "google/protobuf/timestamp.proto";

enum Owner {
  TED = 0;
  OLIVIA = 1;
}

message CreateAccomplishmentRequest {
  string name = 1;
  string note = 2;
  string type = 3;
  Owner owner = 4;
  bool is_done = 5;
}

message AccomplishmentResponse {
  string id = 1;
  google.protobuf.Timestamp created_date = 2;
  google.protobuf.Timestamp modified_date = 3;
  string name = 4;
  string note = 5;
  string type = 6;
  Owner owner = 7;
  bool is_done = 8;
}