syntax = "proto3";

option csharp_namespace = "TedOliviaAccomplishmentsApi.Protobuf";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "enums.proto";

message PingProductivityLogRequest {
  string type = 1;
  string note = 2;
  Owner owner = 3;
}

message ProductivityLogResponse {
  string id = 1;
  google.protobuf.Timestamp created_date = 2;
  google.protobuf.Timestamp modified_date = 3;
  string type = 4;
  string note = 5;
  Owner owner = 6;
  bool is_active = 7;
  google.protobuf.Duration active_duration = 8;
}